test/mutation_analysis/s0560_subarray_sum_equals_k/hafis/starchat/mutants/15/result.txt
./test/mutation_analysis/s0560_subarray_sum_equals_k/hafis/starchat/mutants/15/Solution.java:36: verify: The prover cannot establish an assertion (Postcondition: ./test/mutation_analysis/s0560_subarray_sum_equals_k/hafis/starchat/mutants/15/Solution.java:17:) in method subarraySum
        return ret;
        ^
./test/mutation_analysis/s0560_subarray_sum_equals_k/hafis/starchat/mutants/15/Solution.java:17: verify: Associated declaration: ./test/mutation_analysis/s0560_subarray_sum_equals_k/hafis/starchat/mutants/15/Solution.java:36:
//@ ensures((\result >= 0) && (\result <= nums.length));
    ^
./test/mutation_analysis/s0560_subarray_sum_equals_k/hafis/starchat/mutants/15/Solution.java:18: verify: The prover cannot establish an assertion (UndefinedTooLargeIndex) in method subarraySum
//@ ensures(((nums[0] == 1 && nums[1] == 1 && nums[2] == 1 && nums.length == 3) && (k == 2)) ==> (\result == 2));
                                  ^
./test/mutation_analysis/s0560_subarray_sum_equals_k/hafis/starchat/mutants/15/Solution.java:36: verify: Associated method exit
        return ret;
        ^
./test/mutation_analysis/s0560_subarray_sum_equals_k/hafis/starchat/mutants/15/Solution.java:18: verify: The prover cannot establish an assertion (UndefinedTooLargeIndex) in method subarraySum
//@ ensures(((nums[0] == 1 && nums[1] == 1 && nums[2] == 1 && nums.length == 3) && (k == 2)) ==> (\result == 2));
                                                  ^
./test/mutation_analysis/s0560_subarray_sum_equals_k/hafis/starchat/mutants/15/Solution.java:36: verify: Associated method exit
        return ret;
        ^
error: An error while executing a proof script for subarraySum: (error "Solver has unexpectedly terminated")
1 error
6 verification failures
